// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiRangeLevels is rendered 1`] = `
<div
  class="euiRangeLevels euiRangeLevels--hasTicks"
>
  <span
    class="euiRangeLevel euiRangeLevel--danger customClass"
    data-test-subj="firstLevel"
    style="left:calc(0% + 0px);right:calc(100% - 0px)"
  />
  <span
    class="euiRangeLevel euiRangeLevel--success"
    style="left:calc(0% + 0px);right:calc(100% - 0px)"
  />
</div>
`;

exports[`EuiRangeLevels is rendered with named and custom color 1`] = `
<div
  class="euiRangeLevels euiRangeLevels--hasTicks"
>
  <span
    class="euiRangeLevel euiRangeLevel--danger"
    style="left:calc(0% + 0px);right:calc(100% - 0px)"
  />
  <span
    class="euiRangeLevel euiRangeLevel--customColor"
    style="left:calc(0% + 0px);right:calc(100% - 0px);background-color:#ff0000"
  />
</div>
`;

exports[`EuiRangeLevels should throw error if \`level.max\` is higher than \`max\` 1`] = `"The level max of 200 is higher than the max value of 100."`;

exports[`EuiRangeLevels should throw error if \`level.min\` is lower than \`min\` 1`] = `"The level min of -10 is lower than the min value of 0."`;
